--- a/Assets/cssFolder/style.css
+++ b/Assets/cssFolder/style.css
@@ -1,4 +1,27 @@
+/* body {
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+} */
+
+
+html,
 body {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
+    height: 100%;
+}
+
+#page-content {
+  flex: 1 0 auto;
+}
+
+#sticky-footer {
+  flex-shrink: none;
+}
+
+/* Other Classes for Page Styling */
+
+body {
+  background: #007bff;
+  background: linear-gradient(to right, #0062E6, #33AEFF);
 }
