--- a/Assets/cssFolder/style.css
+++ b/Assets/cssFolder/style.css
@@ -6,6 +6,8 @@
 
 html,
 body {
+    background: #007bff;
+    background: linear-gradient(to right, #0062E6, #33AEFF);
     font-family: 'Lato', sans-serif;
     font-size: 16px;
     height: 100%;
@@ -21,7 +23,7 @@ body {
 
 /* Other Classes for Page Styling */
 
-body {
+/* body {
   background: #007bff;
   background: linear-gradient(to right, #0062E6, #33AEFF);
-}
+} */
